--- a/css/main.scss
+++ b/css/main.scss
@@ -13,5 +13,7 @@
 @import 'tpl-portfolio';
 @import 'tpl-sliders';
 @import 'tpl-team';
+@import 'tpl-team-about';
+@import 'tpl-why-we';
 @import 'page-about';
 
