--- a/css/_mixins.scss
+++ b/css/_mixins.scss
@@ -1,4 +1,5 @@
 // Usage: @include mn550 {}
+$m450-width: 450px;
 $m550-width: 550px;
 $m600-width: 600px;
 $m768-width: 768px;
@@ -8,6 +9,12 @@ $m1200-width: 1200px;
 $m1400-width: 1400px;
 $m1600-width: 1600px;
 $m1920-width: 1921px;
+@mixin mn450 {
+    @media (min-width: #{$m450-width}) {
+        @content;
+    }
+}
+
 @mixin mn550 {
     @media (min-width: #{$m550-width}) {
         @content;
