--- a/css/_variables.scss
+++ b/css/_variables.scss
@@ -10,4 +10,7 @@ $grey: #e5e5e5;
 $lightgrey: #f7f7f7;
 .lightgrey {color: $lightgrey;}
 
+$darkgrey: #666;
+.darkgrey {color: $darkgrey;}
+
 .bggrey {background-color: $grey;}
