--- a/css/_tpl-team-about.scss
+++ b/css/_tpl-team-about.scss
@@ -3,7 +3,7 @@
     font-size: 16px;
     position: relative;
     &__bg {
-        background: url('../img/bg-team.jpg') center no-repeat;
+        background: $darkgrey url('../img/bg-team.jpg') center no-repeat;
         position: absolute;
         left: 0;
         right: 0;
